<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.forecast.MainActivity"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/top_label"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:textSize="28sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/side_label1"
            android:id="@+id/street_label"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="15dp"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/streetText"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#000000"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/side_label2"
            android:id="@+id/city_label"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginLeft="15dp"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/cityText"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#000000"
            android:inputType="none" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/side_label3"
            android:id="@+id/state_label"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginLeft="15dp"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/state_spinner"
            android:layout_row="2"
            android:layout_column="1"
            android:spinnerMode="dropdown"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:entries="@array/state_array"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/side_label4"
            android:id="@+id/degree_label"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginLeft="15dp"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:orientation="horizontal">



            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_label1"
                android:id="@+id/f_radio"
                android:checked="true"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_label2"
                android:id="@+id/c_radio"
                android:checked="false"
                android:textColor="#000000"
                android:textSize="18sp" />


        </RadioGroup>

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/search_button_text"
            android:id="@+id/s_button"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:background="@drawable/roundedbutton1"/>

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/clear_button_text"
            android:id="@+id/c_button"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:background="@drawable/roundedbutton1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/street_alert_msg"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_marginTop="50dp"
            android:textColor="#FF0000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/city_alert_msg"
            android:layout_row="6"
            android:layout_column="1"
            android:textColor="#FF0000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/state_alert_msg"
            android:layout_row="7"
            android:layout_column="1"
            android:textColor="#FF0000"
            android:textSize="18sp" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/gridLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abt_button_text"
            android:id="@+id/about_button"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginStart="57dp"
            android:layout_marginLeft="15dp"
            android:layout_margin="0dp"
            android:background="#dedede" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:id="@+id/linearLayout"
            android:layout_marginLeft="140dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Disc_text"
                android:id="@+id/disc_text"
                android:textColor="#000000"
                android:layout_marginTop="0dp"
                android:layout_gravity="right" />

            <ImageButton
                android:layout_width="115dp"
                android:layout_height="45dp"
                android:id="@+id/forecastButton"
                android:contentDescription="@string/disc_image_desc"
                android:src="@drawable/forecast_logo"
                android:scaleType="fitEnd"
                android:background="@android:color/transparent"
                android:clickable="true" />
        </LinearLayout>
    </GridLayout>

</RelativeLayout>

